# otus_cpp_basic

./: .gitignore  README.md
hw01/: README.md  test1.cpp  test2.cpp
hw02/: README.md  env.md  hello_world.cpp
hw07/: CMakeLists.txt  README.md  guess_the_number.cpp  task.md
hw11/: Ball.cpp  Ball.hpp  Color.hpp  Dust.cpp  Dust.hpp  Physics.cpp  Physics.hpp  README.md  Velocity.hpp  World.cpp  World.hpp
hw12/: CMakeLists.txt  README.md  containers.cpp  list.h  listdouble.cpp  listdouble.h  listsingle.cpp  listsingle.h  vector.cpp  vector.h
hw14/: README.md  statistics.cpp
